Composição de páginas e Bootstrap 4

--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,32 @@
             <artifactId>jsf-impl</artifactId>
             <version>2.2.17</version>
         </dependency>
-
+        
+        <!-- WebJars -->
+        <!-- Bootstrap -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+        <!-- JQuery -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+        <!-- Font Awesome -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.7.0</version>
+        </dependency>
+        <!-- Popper JS -->
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>popper.js</artifactId>
+            <version>1.14.3</version>
+        </dependency>
     </dependencies>
 
     <build>
